--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
-<title>Hello, and welcome to my GitHub Pages</title>
+<h1>Hello, and welcome to my GitHub Pages</h1>
 
 <div>If you are looking for the test, here it is:<a href="https://bendev9.github.io/test/"> https://bendev9.github.io/test</a></div>
+
+<a href="tester.html">testing page</a>
