--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
-<h1>Hello, and welcome to my GitHub Pages</h1>
+<html>
+    <h1>Hello, and welcome to my GitHub Pages</h1>
 
-<div>If you are looking for the test, here it is:<a href="https://bendev9.github.io/test/"> https://bendev9.github.io/test</a></div>
+    <div>
+        <p>Pages:<br><a href="testingpage">Testing Page</a></p>
+    </div>
 
-<a href="tester.html">testing page</a>
+</html>
