--- a/404.html
+++ b/404.html
@@ -54,6 +54,6 @@
     <body>
         <h1 class="w3-center" style="color: red;">Oops, I couldn't find that page :(</h1>
         <br>
-        <div class="w3-center"><a href="bendev9.github.io" class="w3-button">Return to front page</a></div>
+        <div class="w3-center"><a href="/" class="w3-button">Return to front page</a></div>
     </body>
 </html>
