--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <a href="https://github.com/BenDev9">GitHub</i></a>
             <p class="w3-medium">
             Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
-            and <a href="github.com" target="_blank">GitHub</a>
+            and <a href="https://pages.github.com/" target="_blank">GitHub</a>
             </p>
         </footer>
     </body>
