--- a/index.html
+++ b/index.html
@@ -86,7 +86,11 @@
 
         <section class="w3-center">
             <h2>Updates</h2>
-            <p>Nothing to show right now!</p>
+            <article>
+                <h3>Beta Testers!</h3>
+                <p>Those that are here to beta test my game, click here:</p>
+                <a href="https://bendev9.github.io/BallGame" class="w3-button">To Beta Testing</a>
+            </article>
         </section>
 
         <!-- Footer -->
