--- a/index.html
+++ b/index.html
@@ -92,6 +92,12 @@
                 <a href="https://bendev9.github.io/BallGame" class="w3-button">To Beta Testing</a>
             </article>
         </section>
+        
+        <section>
+            <div class="bingwidget" data-type="covid19" data-market="en-us" data-language="en-us"></div>
+  
+            <script src="//www.bing.com/widget/bootstrap.answer.js" async=""></script>
+        </section>
 
         <!-- Footer -->
         <footer class=" w3-center w3-xlarge">
